frontend: fix table overflow for firefox

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -157,6 +157,11 @@ html, body {
 /* .table-runs > * > tr > *:last-child { } */
 .table-runs > tbody > tr > td:last-child {
   padding: 0 !important;
+  overflow: hidden;
+}
+.table-runs .table-files-container {
+  width: 100%;
+  height: 100%;
   overflow: auto;
 }
 
